--- a/Shaikhutdinov.htm
+++ b/Shaikhutdinov.htm
@@ -1,1 +1,10 @@
-Shaikhutdinov
+<html>
+    <head>
+            <link type="text/css" rel="stylesheet" media="all" href="lib/style.css" />
+    </head>
+    <body>
+        <h1 style="text-align:center">Привет мир!</h1>
+        <p style="text-align:center">Это лабораторная работы №5</p>
+        <p style="text-align:center">Выполнил студент группы ВИТМс-301С Шайхутдинов Артем Альбертович</p>
+    </body>
+</html>
